Survey now shows up correctly on mobile

--- a/src/pages/Survey.css
+++ b/src/pages/Survey.css
@@ -79,3 +79,10 @@
   flex-direction: column;
   gap: 20px; 
 }
+
+.Survey-Survey {
+  height: "800vh";
+  width: "600vw";
+  max-width: 100vw;
+  max-height: 56.25vw;
+}
